# netbox-nornir

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tasks.py
.github/workflows/: ci_integration.yml
docker/configuration/: configuration.example.py
docs/: index.md  install.md  inventory.md
install/: index.html
inventory/: index.html
netbox_nornir/: __init__.py  constraints.py  exceptions.py  utils.py
netbox_nornir/plugins/credentials/: aws_ssm.py  base.py  env_vars.py
netbox_nornir/plugins/inventory/: netbox_orm.py
netbox_nornir/plugins/tasks/dispatcher/: __init__.py  arista_eos.py  cisco_asa.py  cisco_ios.py  cisco_ios_restconf.py  cisco_ios_xr.py  cisco_nxos.py  cisco_wlc.py  default.py  fortinet_fortios.py  juniper_junos.py  netscaler.py  paloalto_panos.py
search/: search_index.json
tasks/: index.html
